syntax = "proto3";

package revokpb;

service Revok {
  rpc GetCredentialCounts(CredentialCountRequest) returns (CredentialCountResponse) {}
  rpc GetOrganizationCredentialCounts(OrganizationCredentialCountRequest) returns (OrganizationCredentialCountResponse) {}
}

message CredentialCountRequest {}

message OrganizationCredentialCount {
  string owner = 1;
  int64 count = 2;
}

message CredentialCountResponse {
  repeated OrganizationCredentialCount credentialCounts = 1;
}

message OrganizationCredentialCountRequest {
  string owner = 1;
}

message RepositoryCredentialCount {
  string name = 1;
  int64 count = 2;
}

message OrganizationCredentialCountResponse {
  repeated RepositoryCredentialCount credentialCounts = 1;
}
